feat: add userId to JWT token